# lightwave-infrastructure-catalog

./: .gitignore  .pre-commit-config.yaml  DJANGO_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md
.claude/: settings.json
.github/workflows/: infrastructure-tests.yml  pre-commit.yml  test.yml
examples/secret-management/: README.md
examples/secret-management/01-basic-secret/: terragrunt.hcl
examples/secret-management/04-backend-service-stack/: terragrunt.stack.hcl
examples/tofu/postgresql/: main.tf  outputs.tf  variables.tf
examples/tofu/redis/: main.tf  outputs.tf  variables.tf
examples/tofu/s3-cdn-bucket/: main.tf  (+2 more)
modules/budget/: README.md  main.tf  outputs.tf  variables.tf
modules/cloudflare-dns/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
modules/deploy-runner-invoker/: main.tf  outputs.tf  variables.tf
modules/django-fargate-service/: README.md  dependencies.tf  main.tf  outputs.tf  variables.tf
modules/ecs-deploy-runner/: ARCHITECTURE.md  iam.tf  main.tf  outputs.tf  variables.tf
modules/ecs-fargate-service/: main.tf
modules/github-oidc-role/: main.tf  outputs.tf  variables.tf
modules/postgresql/: README.md  main.tf  outputs.tf  variables.tf
modules/redis/: README.md  main.tf  outputs.tf  variables.tf
modules/s3-bucket/: main.tf  outputs.tf  variables.tf
modules/sg/: main.tf  outputs.tf  variables.tf
modules/vpc-endpoints/: README.md  main.tf  outputs.tf  variables.tf
scripts/: bootstrap-production.sh  cleanup-s3-bucket.py
stacks/django-backend-prod/: README.md  deploy.sh  terragrunt.stack.hcl
test/: DJANGO_TESTING.md  Makefile  TESTING_GUIDE.md  TEST_PATTERNS.md  django_integration_test.go  go.mod  go.sum
test/helpers/: aws_helpers.go  retry_helpers.go  terraform_helpers.go
test/modules/: ecs_fargate_service_test.go  postgresql_test.go  redis_test.go
test/tofu/: s3_cdn_bucket_test.go
units/cloudflare-dns/: README.md  terragrunt.hcl
units/cloudflare-dns-s3/: README.md  terragrunt.hcl
units/django-fargate-stateful-service/: README.md  terragrunt.hcl
units/django-fargate-stateful-service/src/: .dockerignore  .gitignore  Dockerfile  gunicorn.conf.py  pyproject.toml  wsgi.sh
units/django-fargate-stateful-service/src/apps/core/: urls.py
units/django-fargate-stateful-service/src/apps/health/: urls.py  views.py
units/django-fargate-stateful-service/src/config/: __init__.py  asgi.py  urls.py  wsgi.py
units/django-fargate-stateful-service/src/config/settings/: base.py  dev.py  prod.py  test.py
units/dynamodb-table/: terragrunt.hcl
units/ecs-fargate-stateful-service/: terragrunt.hcl
units/lambda-artifact-s3-bucket/: terragrunt.hcl
units/lambda-iam-role-to-dynamodb/: terragrunt.hcl
units/lambda-stateful-service/: terragrunt.hcl
units/postgresql/: README.md  terragrunt.hcl
units/redis/: README.md  terragrunt.hcl
units/s3-cdn-bucket/: README.md  terragrunt.hcl
units/secret/: README.md  main.tf  outputs.tf  variables.tf
units/sg-to-db-sg-rule/: terragrunt.hcl
units/vpc-endpoint-access-rule/: terragrunt.hcl
units/vpc-endpoints/: terragrunt.hcl
(+10 files in other folders)
