[project]
name = "django-api"
version = "1.0.0"
description = "Django REST Framework API for ECS Fargate deployment"
requires-python = ">=3.12"
dependencies = [
    # Django core
    "Django>=5.0,<5.1",

    # Django REST Framework
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",

    # Django extensions
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "dj-database-url>=2.1",
    "whitenoise>=6.6",  # Static file serving

    # Database
    "psycopg[binary]>=3.2",  # PostgreSQL adapter

    # Redis & Caching
    "redis>=5.0",
    "django-redis>=5.4",

    # Celery
    "celery>=5.4",
    "django-celery-beat>=2.6",

    # WSGI Server
    "gunicorn>=22.0",

    # Utilities
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",  # Parallel test execution
    "factory-boy>=3.3",  # Test fixtures

    # Code quality
    "black>=24.4",
    "ruff>=0.5",
    "mypy>=1.11",
    "django-stubs>=5.0",

    # Development tools
    "django-debug-toolbar>=4.4",
    "django-extensions>=3.2",
    "ipython>=8.26",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*/migrations/*",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["test"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "--maxfail=1",
    "--tb=short",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
